--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,7 @@
 {
     "version": 2,
     "builds": [
-      { "src": "dist/index.cjs", "use": "@vercel/node" }
-    ],
-    "routes": [
-      { "src": "/(.*)", "dest": "dist/index.cjs" }
+      { "src": "package.json", "use": "@vercel/node" }
     ]
   }
   
